WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125011
JSC does not build if OPCODE_STATS is enabled.
https://bugs.webkit.org/show_bug.cgi?id=125011
Summary
JSC does not build if OPCODE_STATS is enabled.
László Langó
Reported
2013-11-29 06:54:26 PST
JSC does not build if OPCODE_STATS is enabled.
Attachments
Patch
(1.05 KB, patch)
2013-11-29 06:56 PST
,
László Langó
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
László Langó
Comment 1
2013-11-29 06:56:34 PST
Created
attachment 218060
[details]
Patch
Filip Pizlo
Comment 2
2013-12-02 07:06:04 PST
Comment on
attachment 218060
[details]
Patch This is another one of those options that we should remove. It's entirely subsumed by the new profiler, which is always built and can be enabled with a runtime flag.
WebKit Commit Bot
Comment 3
2013-12-02 07:33:19 PST
Comment on
attachment 218060
[details]
Patch Clearing flags on attachment: 218060 Committed
r159933
: <
http://trac.webkit.org/changeset/159933
>
WebKit Commit Bot
Comment 4
2013-12-02 07:33:20 PST
All reviewed patches have been landed. Closing bug.
Fujii Hironori
Comment 5
2019-03-28 03:04:04 PDT
Comment hidden (obsolete)
If define ENABLE_OPCODE_STATS 1, can't compile due to other issues.
> In file included from DerivedSources\JavaScriptCore\unified-sources\UnifiedSource-f0a787a9-8.cpp:6: > ..\..\Source\JavaScriptCore\bytecode/Opcode.cpp(97,38): error: no template named 'pair'; did you mean 'std::pair'? > std::pair<int, int> leftPair = *(pair<int, int>*) left; > ^~~~ > std::pair > C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\VC\Tools\MSVC\14.14.26428\include\utility(93,9): note: 'std::pair' declared here > struct pair > ^ > In file included from DerivedSources\JavaScriptCore\unified-sources\UnifiedSource-f0a787a9-8.cpp:6: > ..\..\Source\JavaScriptCore\bytecode/Opcode.cpp(99,39): error: no template named 'pair'; did you mean 'std::pair'? > std::pair<int, int> rightPair = *(pair<int, int>*) right; > ^~~~ > std::pair > C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\VC\Tools\MSVC\14.14.26428\include\utility(93,9): note: 'std::pair' declared here > struct pair > ^ > 2 errors generated.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug