JSC does not build if OPCODE_STATS is enabled. https://bugs.webkit.org/show_bug.cgi?id=125011

Patch by László Langó <lango@inf.u-szeged.hu> on 2013-12-02
Reviewed by Filip Pizlo.

* bytecode/Opcode.cpp:

Canonical link: https://commits.webkit.org/143176@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159933 268f45cc-cd09-0410-ab3c-d52691b4dbfc